Overflow resolved

--- a/style.css
+++ b/style.css
@@ -90,3 +90,7 @@ button.button-login {
   margin: 55vh 0 0 0;
   padding: 0;
 }
+
+.spotify-body {
+  margin-left: 10px;
+}
